--- a/src/main/resources/templates/goods_list.html
+++ b/src/main/resources/templates/goods_list.html
@@ -30,8 +30,8 @@
             <td th:text="${goods.goodsPrice}"></td>
             <td th:text="${goods.seckillPrice}"></td>
             <td th:text="${goods.stockCount}"></td>
-<!--            <td><a th:href="'/to_detail/'+${goods.id}">详情</a></td>-->
-            <td><a th:href="'/goods_detail.htm?goodsId='+${goods.id}">详情</a></td>
+            <td><a th:href="'/to_detail/'+${goods.id}">详情</a></td>
+            <td><a th:href="'/goods_detail.htm?goodsId='+${goods.id}">优化后的详情</a></td>
 
         </tr>
     </table>
