--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,11 +1,117 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charselogin.htmlt="UTF-8">
-    <title>Title</title>
+    <title>注册</title>
+    <!-- jquery -->
+    <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+    <!-- bootstrap -->
+    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap/css/bootstrap.min.css}"/>
+    <script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+    <!-- jquery-validator -->
+    <script type="text/javascript" th:src="@{/jquery-validation/jquery.validate.min.js}"></script>
+    <script type="text/javascript" th:src="@{/jquery-validation/localization/messages_zh.min.js}"></script>
+    <!-- layer -->
+    <script type="text/javascript" th:src="@{/layer/layer.js}"></script>
+    <!-- md5.js -->
+    <script type="text/javascript" th:src="@{/js/md5.min.js}"></script>
+    <!-- common.js -->
+    <script type="text/javascript" th:src="@{/js/common.js}"></script>
 </head>
 <body>
-<h2>注册</h2>
+
+<form name="registerForm" id="registerForm" method="post" style="width:50%; margin:0 auto">
+
+    <h2 style="text-align:center; margin-bottom: 20px">用户注册</h2>
+
+    <div class="form-group">
+        <div class="row">
+            <label class="form-label col-md-4">请输入手机号码</label>
+            <div class="col-md-5">
+                <input id="mobile" name="mobile" class="form-control" type="text" placeholder="手机号码" required="true"
+                       minlength="11" maxlength="11"/>
+            </div>
+            <div class="col-md-1">
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="row">
+            <label class="form-label col-md-4">请输入密码</label>
+            <div class="col-md-5">
+                <input id="password" name="password" class="form-control" type="password" placeholder="密码"
+                       required="true" minlength="6" maxlength="16"/>
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="row">
+            <label class="form-label col-md-4">确认密码</label>
+            <div class="col-md-5">
+                <input id="confirmPassword" class="form-control" type="password" placeholder="密码"
+                       required="true" minlength="6" maxlength="16"/>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-5">
+            <button class="btn btn-primary btn-block" type="reset" onclick="reset()">重置</button>
+        </div>
+        <div class="col-md-5">
+            <button class="btn btn-primary btn-block" type="submit" onclick="register()">注册</button>
+        </div>
+    </div>
+    <div style="margin: 14px 0 100px 335px;"><a href="/login">前往登录</a></div>
+
+</form>
 </body>
 </html>
+
+<script>
+    function register() {
+        $("#registerForm").validate({
+            submitHandler: function () {
+                doRegister();
+            }
+        });
+    }
+
+    function doRegister() {
+        g_showLoading();
+        let inputPass = $("#password").val();
+        let confirmPass = $("#confirmPassword").val();
+        if (inputPass !== confirmPass) {
+            layer.closeAll()
+            layer.alert("两次密码不一致")
+            return;
+        }
+        let salt = g_passsword_salt;
+        let str = "" + salt.charAt(2) + salt.charAt(1) + inputPass + salt.charAt(5) + salt.charAt(7);
+        let password = md5(str);
+
+        $.ajax({
+            url: "/register",
+            type: "POST",
+            data: {
+                mobile: $("#mobile").val(),
+                password: password
+            },
+            success: function (data) {
+                if (data.code == 200) {
+                    layer.alert("注册成功");
+                    window.location.href = "/login";
+                } else {
+                    console.log(data);
+                    layer.msg(data.msg);
+                }
+            },
+            error: function () {
+                console.log(data);
+                layer.closeAll();
+            }
+        });
+    }
+</script>
