--- a/src/main/resources/templates/goods_list.html
+++ b/src/main/resources/templates/goods_list.html
@@ -4,27 +4,15 @@
     <meta charset="UTF-8">
     <title>商品列表</title>
     <!-- jquery -->
-    <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
-    <!-- bootstrap -->
-    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap/css/bootstrap.min.css}" />
-    <script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
-    <!-- jquery-validator -->
-    <script type="text/javascript" th:src="@{/jquery-validation/jquery.validate.min.js}"></script>
-    <script type="text/javascript" th:src="@{/jquery-validation/localization/messages_zh.min.js}"></script>
-    <!-- layer -->
-    <script type="text/javascript" th:src="@{/layer/layer.js}"></script>
-    <!-- md5.js -->
-    <script type="text/javascript" th:src="@{/js/md5.min.js}"></script>
-    <!-- common.js -->
-    <script type="text/javascript" th:src="@{/js/common.js}"></script>
+    <div th:replace="common/import_bar::commom_improt"></div>
 </head>
 <body>
-
+<div th:replace="common/top_bar::top-bar"></div>
 <div class="panel panel-default">
     <div class="panel-heading">秒杀商品列表</div>
     <table class="table" id="goodslist">
         <tr><td>商品名称</td><td>商品图片</td><td>商品原价</td><td>秒杀价</td><td>库存数量</td><td>详情</td></tr>
-        <tr  th:each="goods,goodsStat : ${goodsList}">
+        <tr  th:each="goods : ${goodsList}">
             <td th:text="${goods.goodsName}"></td>
             <td ><img th:src="@{${goods.goodsImg}}" width="100" height="100" /></td>
             <td th:text="${goods.goodsPrice}"></td>
@@ -38,6 +26,9 @@
 </div>
 </body>
 <script>
+
+
+
     $(function(){
         countDown();
     });
