--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,24 +3,12 @@
 <head>
     <meta charselogin.htmlt="UTF-8">
     <title>登录</title>
-    <!-- jquery -->
-    <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
-    <!-- bootstrap -->
-    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap/css/bootstrap.min.css}"/>
-    <script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
-    <!-- jquery-validator -->
-    <script type="text/javascript" th:src="@{/jquery-validation/jquery.validate.min.js}"></script>
-    <script type="text/javascript" th:src="@{/jquery-validation/localization/messages_zh.min.js}"></script>
-    <!-- layer -->
-    <script type="text/javascript" th:src="@{/layer/layer.js}"></script>
-    <!-- md5.js -->
-    <script type="text/javascript" th:src="@{/js/md5.min.js}"></script>
-    <!-- common.js -->
-    <script type="text/javascript" th:src="@{/js/common.js}"></script>
+    <link rel="stylesheet" href="/css/loginRegister.css">
+    <div th:replace="common/import_bar::commom_improt"></div>
 </head>
 <body>
 
-<form name="loginForm" id="loginForm" method="post" style="width:50%; margin:0 auto">
+<form class="my-form" id="loginForm" method="post">
 
     <h2 style="text-align:center; margin-bottom: 20px">用户登录</h2>
 
@@ -54,8 +42,7 @@
             <button class="btn btn-primary btn-block" type="submit" onclick="login()">登录</button>
         </div>
     </div>
-    <div style="margin: 14px 0 100px 335px;cursor: pointer"><a href="/register">前往注册</a></div>
-
+    <div class="a-jump-div"><a class="a-jump" href="/register">还未注册? 前往注册</a></div>
 </form>
 </body>
 </html>
@@ -71,10 +58,10 @@
     function doLogin() {
         g_showLoading();
 
-        var inputPass = $("#password").val();
-        var salt = g_passsword_salt;
-        var str = "" + salt.charAt(2) + salt.charAt(1) + inputPass + salt.charAt(5) + salt.charAt(7);
-        var password = md5(str);
+        let inputPass = $("#password").val();
+        let salt = g_passsword_salt;
+        let str = "" + salt.charAt(2) + salt.charAt(1) + inputPass + salt.charAt(5) + salt.charAt(7);
+        let password = md5(str);
 
         $.ajax({
             url: "/login",
