:kissing_cat:完善功能

--- a/src/main/resources/templates/bind_email.html
+++ b/src/main/resources/templates/bind_email.html
@@ -25,6 +25,11 @@
 </body>
 </html>
 <script>
+
+    $(function () {
+        getUser();
+    });
+
     function getCode() {
         let email = $("#email").val();
         if (email == null || email === "") {
