--- a/src/main/resources/templates/goods_list.html
+++ b/src/main/resources/templates/goods_list.html
@@ -18,42 +18,17 @@
             <td th:text="${goods.goodsPrice}"></td>
             <td th:text="${goods.seckillPrice}"></td>
             <td th:text="${goods.stockCount}"></td>
-            <td><a th:href="'/to_detail/'+${goods.id}">详情</a></td>
-            <td><a th:href="'/goods_detail.htm?goodsId='+${goods.id}">优化后的详情</a></td>
+            <td><a th:href="'/goods_detail.htm?goodsId='+${goods.id}">详情</a></td>
 
         </tr>
     </table>
 </div>
 </body>
 <script>
-
-
-
-    $(function(){
+    $(function () {
+        getUser();
         countDown();
     });
-
-    function countDown(){
-        var remainSeconds = $("#remainSeconds").val();
-        var timeout;
-        if(remainSeconds > 0){//秒杀还没开始，倒计时
-            $("#buyButton").attr("disabled", true);
-            timeout = setTimeout(function(){
-                $("#countDown").text(remainSeconds - 1);
-                $("#remainSeconds").val(remainSeconds - 1);
-                countDown();
-            },1000);
-        }else if(remainSeconds == 0){//秒杀进行中
-            $("#buyButton").attr("disabled", false);
-            if(timeout){
-                clearTimeout(timeout);
-            }
-            $("#miaoshaTip").html("秒杀进行中");
-        }else{//秒杀已经结束
-            $("#buyButton").attr("disabled", true);
-            $("#miaoshaTip").html("秒杀已经结束");
-        }
-    }
 
 </script>
 </html>
